istio/business/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: boutique.nemo.kaonmir.xyz
  name: business-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - boutique.nemo.kaonmir.xyz
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true # sends 301 redirect for http requests
    - hosts:
        - boutique.nemo.kaonmir.xyz
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: for-all
